# functai

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: 01_specs.qmd
examples/: 01_format_preview.qmd  01_specs.md  01_specs.qmd  02_history.qmd  03_optimization.qmd  04_react_agent.qmd  advanced_example.py  agents.qmd  classify.py  translator.qmd
examples/claide_code/: main.qmd
examples/docments_flexiclass/: main.qmd
examples/graph_rag/: iteration_0  iteration_1  iteration_2  iteration_3  knowledge_graph.gv  main copy 2.qmd  main copy.qmd  main.qmd
examples/local_simple_rag_agent/: demo.qmd
examples/local_simple_rag_agent.qmd/: demo.qmd
examples/modules/: main.qmd
examples/optimizing_translator/: main.qmd
examples/tracking_and_osb/: main.qmd
examples/typing_and_extraction/: main.qmd
functai/: __init__.py  core.py
